--- a/淘宝搜索案例/index.html
+++ b/淘宝搜索案例/index.html
@@ -11,6 +11,7 @@
     <script src="./lib/jquery.js"></script>
   </head>
   <body>
+    <div class="top"></div>
     <div class="container">
       <!-- Logo -->
       <img src="./images/taobao_logo.png" alt="" class="logo" />
