--- a/新闻列表/案例-新闻列表/案例-新闻列表.html
+++ b/新闻列表/案例-新闻列表/案例-新闻列表.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/news.css" />
     <script src="./lib/jquery.js"></script>
     <script src="./lib/template-web.js"></script>
-    <script src="./js/list.js"></script>
+    <script src="./js/newlist.js"></script>
   </head>
   <body>
 
